# WiseCall

./: .gitignore
wisecall-backend/: Dockerfile  audio_processor.py  backend.py  extended_data.csv  fourier.py  model  model.json  model.pkl  model.py  normal_example.m4a  pyproject.toml  requirements.txt  scam_example.m4a  test.py  tfidf_vectorizer.pkl  transcription.py  trimmed_data.csv
