[tool.poetry]
name = "WiseCall"
version = "0.1.0"
description = "FastAPI-based scam call detection system"
authors = ["Kaloyan Draganov <kaloyan@draganov.com>", "Shariq Rifai <shariqrifai.p@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.115.6"
daphne = "^4.0.0"
numpy = "*"
pandas = "*"
matplotlib = "*"
scikit-learn = "^1.0.2"
xgboost = "^2.1.3"
pydub = "*"
whisper = "*"
textblob = "*"
twilio = "^9.4.3"
joblib = "^1.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
